feat(build): minify container image using custom jlink JRE